# argo

./: .env.example  .gitignore  DOCS.md  README.md  docker-compose.yml  pyproject.toml
argos/: cli.py  config.py  embedding.py  graph.py  indexer.py  linker.py  local_index.py  models.py  reader.py  search.py  utils.py
argos-ui/: .gitignore  index.html  package-lock.json  package.json
argos-ui/src/: App.jsx  index.css
argos-ui/src/components/: GraphView.jsx  NodePanel.jsx  SequentialView.jsx  Toolbar.jsx  TypedNode.jsx
argos-ui/src/graph/: layout.js  loader.js  transform.js
argos/extraction/: extractor.py
argos/ingestion/: code_comments.py  github.py  local_docs.py
argos/storage/: markdown.py
